test/signal/negative/private_test_hooks_negative.ml
module Signal = Eta_signal.Make_no_error ()

let _must_not_typecheck = Signal.Private_test_hooks.clear ()
